# micro_mcp

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Gemfile  LICENSE.txt  README.md  Rakefile  mcp_lite.gemspec  micro_mcp.gemspec
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md
.github/workflows/: copilot-setup-steps.yml  cross-compile.yml  version-check.yml
docs/: cross-compilation.md
docs/changes/: ERGONOMIC_IMPROVEMENTS.md
ext/mcp_lite/: Cargo.toml  extconf.rb
ext/mcp_lite/src/: lib.rs  server.rs  utils.rs
ext/micro_mcp/: AGENTS.md  Cargo.toml  extconf.rb
ext/micro_mcp/src/: lib.rs  server.rs  utils.rs
lib/: mcp_lite.rb  micro_mcp.rb
lib/mcp_lite/: mcp_lite.rb  server.rb  tool_registry.rb  version.rb
lib/micro_mcp/: prompt_registry.rb  runtime.rb  runtime_helpers.rb  schema.rb  server.rb  tool_registry.rb  validation_helpers.rb  version.rb
scripts/: README.md  build_platforms.rb  test-gem.rb  validate-workflow.py
sig/: mcp_lite.rbs  micro_mcp.rbs
test/: runtime_test.rb  test_helper.rb  test_mcp_lite.rb  test_micro_mcp.rb
test/support/: argument_tools.rb  client_capabilities_tool.rb  create_message_tool.rb  ergonomic_examples.rb  ergonomic_test.rb  prompt_example.rb  runtime_lifetime_tool.rb  say_hello_random_language_tool.rb  say_hello_tool.rb
