[package]
name = "mcp_lite"
version = "0.1.0"
edition = "2021"
authors = ["Erwin Kroon <123574+ekroon@users.noreply.github.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
async-trait = "0.1.88"
magnus = { version = "0.7", features = ["rb-sys"] }
rb-sys = { version = "*", default-features = false, features = [
  "stable-api-compiled-fallback",
] }
rust-mcp-sdk = "0.4.3"
serde = "1.0.219"
serde_json = "1.0.140"
tokio = "1.45.1"
